--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "mongoose": "^5.6.6",
-    "note": "^1.2.1"
+    "morgan": "^1.9.1",
+    "note": "^1.2.1",
+    "request": "^2.88.0"
   },
   "devDependencies": {},
   "scripts": {
